fixed transaction flow
